--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sip.js": "0.15.6"
   },
   "devDependencies": {
+    "@types/node": "latest",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/events": "^3.0.0",
     "@types/sinon": "^7.5.0",
